--- a/pokeapp/frontend/templates/index.html
+++ b/pokeapp/frontend/templates/index.html
@@ -12,6 +12,10 @@
     />
     <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}"
     />
+    <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
     <link rel="shortcut icon" href="{% static "images/favicon.ico" %}" type="image/x-icon">
   </head>
   <body>
@@ -19,6 +23,6 @@
       <div id="app"></div>
     </div>
 
-    <script src="{% static "frontend/main.js" %}"></script>
+    <script src="{% static "js/main.js" %}"></script>
   </body>
 </html>
