--- a/pokeapp/frontend/static/css/index.css
+++ b/pokeapp/frontend/static/css/index.css
@@ -2,3 +2,11 @@ h3,
 h4 {
   text-align: center;
 }
+.marginimgshow {
+  margin: 0 20% !important;
+}
+@media (max-width: 768px) {
+  .marginimgshow {
+    margin: 0 40% !important;
+  }
+}
